<resources>
    <string name="app_name">Awesome Boot</string>
    <string name="title_home">Home</string>
    <string name="title_hot_pics">Hot Pics</string>
    <string name="title_menu">Menu</string>
    <string name="title_theme_details">Theme Details</string>
    <string name="preview_qmg_bootanimation">Preview current boot animation</string>
    <string name="preview_qmg_shutdownanimation">Preview current shutdown animation</string>
    <string name="error_loading_themes">Error loading themes: %1$s</string>
    <string name="loading_preview">Loading preview</string>
    <string name="featured_themes">Featured Themes</string>
    <string name="recent_themes">Recent Themes</string>
    <string name="loading_themes">Loading themes</string>
    <string name="download">Download</string>
    <string name="retry">Retry</string>
    <string name="no_themes_found">No themes found</string>
    <string name="qmg_preview_surface_description">Full screen animation preview</string>
    <string name="navigate_up">Navigate up</string>
</resources>